--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 * {
   box-sizing: border-box;
 }
-App {
+html {
+  font-size: 1em;
+}
+.App {
   display: flex;
   flex-direction: column;
   width: 100vw;
@@ -19,15 +22,16 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 1.2em;
+  font-size: 1rem;
   color: #101510;
 }
 .Mode-Btns-Hidden {
   display: none;
 }
+
 .Mode-Btns {
   position: absolute;
-  height: 50%;
+  height: 90%;
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -37,18 +41,29 @@ header {
   background-color: rgba(0, 0, 0, 0.678);
 }
 .Mode-Btns p {
+  margin: 0;
   width: 80%;
-  height: 15%;
   font-size: 1.2rem;
   font-family: inherit;
-  background-color: #f1f1f1;
+  color: white;
+  padding: 2%;
+  text-align: center;
+
+  min-height: fit-content;
 }
 .Mode-Btns button {
-  width: 70%;
-  height: 30%;
-  font-size: 1.5rem;
+  border: 2px solid black;
+  width: 50%;
+  height: 20%;
+  font-size: 1.3rem;
   font-family: inherit;
-  background-color: #f1f1f1;
+  background-color: #5de273;
+}
+.Mode-Btns button:hover {
+  cursor: pointer;
+}
+.Mode-Select {
+  font-size: 4rem;
 }
 
 section {
@@ -152,8 +167,8 @@ section {
   font-size: 0.8rem;
 }
 .Change-Button {
-  font-family: inherit;
-  font-size: 0.8rem;
+  /* font-family: inherit; */
+  font-size: 0.55rem;
   padding: 0;
   width: 60%;
   height: 45%;
@@ -177,32 +192,27 @@ section {
 }
 
 .Score-Container {
-  /* border: 1px solid pink; */
   display: flex;
   flex-direction: column;
   width: 25%;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
 }
 .Score-Container h3 {
-  /* border: 1px solid red; */
   padding-top: 5%;
   height: 50%;
   width: 100%;
   margin: 0;
   text-align: center;
-  /* margin-top: 0.2em; */
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   color: #101510;
 }
 .Score {
-  /* border: 1px solid red; */
   display: inline-block;
   text-align: center;
-  font-size: 3.5rem;
-  height: 100%;
+  font-size: 4rem;
+  height: fit-content;
   width: 100%;
-  /* margin: 0; */
 }
 
 .Turn-Box {
@@ -260,7 +270,7 @@ section {
 }
 
 .Drop-Down {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: inherit;
   height: fit-content;
 }
@@ -269,15 +279,12 @@ section {
 }
 
 .Board {
-  /* border: 1px solid red; */
   display: grid;
-  /* min-width: 70%; */
   grid-gap: 2%;
   font-size: 1rem;
-  /* max-height: 100%; */
   justify-content: center;
-  height: 180px;
-  width: 180px;
+  height: 225px;
+  width: 240px;
 }
 .Board-9 {
   grid-template-columns: repeat(3, 1fr);
@@ -331,14 +338,15 @@ section {
   background-color: #15ff31;
   transform: rotate(360deg);
   transition: transform 1s;
-  animation: blinker 1s;
-  animation-iteration-count: 4;
 }
 
 .Reset-Btn {
   border: 1px solid black;
   font-size: 0.9rem;
   margin: 0.35rem;
+}
+.Reset-Btn:hover {
+  cursor: pointer;
 }
 
 .Box-Content {
@@ -373,30 +381,54 @@ section {
   }
 }
 .Win-Message {
-  background-color: blanchedalmond;
+  background-color: #f6f9f7;
   padding-top: 2%;
   font-size: 1.5rem;
-  animation: blinker 1s;
+  animation: blinker 0.6s;
   animation-iteration-count: 4;
 }
 .No-Message {
   color: transparent;
 }
 
-/* @media only screen and (min-width: 421px) {
+@media only screen and (min-width: 320px) and (max-height: 568px) {
   .Board {
-    width: 55%;
-  }
-} */
-@media only screen and (min-width: 350px) {
-  .Board {
-    width: 230px;
-    height: 230px;
+    height: 190px;
+    width: 210px;
   }
 }
+@media only screen and (min-width: 421px) and (max-height: 568px) {
+  .Board {
+    width: 200px;
+    height: 190px;
+  }
+}
+@media only screen and (min-width: 375px) and (max-height: 812px) {
+  html {
+    font-size: 1.2em;
+  }
+  .Board {
+    width: 250px;
+    height: 250px;
+  }
+}
+@media only screen and (min-width: 375px) {
+  html {
+    font-size: 1.1em;
+  }
+  .Board {
+    width: 250px;
+    height: 220px;
+  }
+}
+
 @media only screen and (min-width: 411px) {
   html {
     font-size: 1.1em;
+  }
+  .Board {
+    width: 290px;
+    height: 230px;
   }
 }
 
@@ -413,8 +445,12 @@ section {
     height: 85vh;
   }
 
-  /* —— Player Panels —> */
-
+  .Mode-Btns button:hover {
+    cursor: pointer;
+  }
+  .Mode-Select {
+    font-size: 4rem;
+  }
   .Player-Box {
     margin: 0;
     display: flex;
@@ -540,6 +576,15 @@ section {
     width: 390px;
   }
 }
+@media only screen and (min-width: 768px) and (min-height: 1024px) {
+  html {
+    font-size: 1.7em;
+  }
+  .Board {
+    height: 410px;
+  }
+}
+
 @media only screen and (min-width: 900px) {
   html {
     font-size: 1.4em;
@@ -547,5 +592,19 @@ section {
   .Board {
     width: 370px;
     height: 350px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  html {
+    font-size: 1.6em;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+  html {
+    font-size: 2.3em;
+  }
+  .Board {
+    height: 500px;
+    width: 500px;
   }
 }
