--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,9 @@ html {
 header {
   background-color: #ffeb38;
   height: 10vh;
+  min-height: 40px;
   width: 100%;
+  min-width: 295px;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -50,7 +52,6 @@ header {
   color: white;
   padding: 2%;
   text-align: center;
-
   min-height: fit-content;
 }
 .Mode-Btns button {
@@ -75,6 +76,7 @@ section {
   display: flex;
   flex-direction: column;
   height: 90vh;
+  min-height: 500px;
   width: 100vw;
   align-items: center;
   justify-content: center;
@@ -86,27 +88,24 @@ section {
 .Player-Box {
   display: flex;
   flex-direction: column;
-  height: 20%;
+  height: 19%;
   width: 95%;
-  max-width: 95%;
-  min-width: 95%;
-  min-height: 20%;
-  margin: 0.3em;
+  min-width: 295px;
   border: 1px solid black;
 }
 .Player {
   display: flex;
   flex-direction: row;
-  height: 85%;
+  height: 80%;
   width: 100%;
+  padding-left: 5px;
   background-color: #37d84b;
-  max-height: 90%;
 }
 
 .Player-Heading {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-items: center;
   width: 30%;
   min-width: 30%;
@@ -119,21 +118,23 @@ section {
   width: 90%;
   min-height: 60%;
   letter-spacing: 0.1rem;
+  line-height: 1rem;
   font-size: 1.4rem;
   word-wrap: break-word;
 }
 .Icon {
-  display: inline-block;
+  align-self: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   width: fit-content;
   min-width: 40%;
   max-width: fit-content;
-  min-height: fit-content;
-  height: fit-content;
+  min-height: 30px;
   border: 1px black solid;
   border-radius: 5%;
   padding: 2%;
-  text-align: center;
   background-color: #ffeb38;
   font-size: 1.5rem;
   font-family: Roboto, “Open Sans”, “Helvetica Neue”, sans-serif;
@@ -145,6 +146,7 @@ section {
   flex-direction: column;
   width: 45%;
   max-height: 100%;
+  margin-top: 1%;
 }
 .NameForm {
   display: flex;
@@ -152,12 +154,12 @@ section {
   align-items: center;
   justify-content: center;
   height: 100%;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
 }
 .Name-Input,
 .Weapon-Input {
   width: 60%;
-  height: 45%;
+  height: 60%;
   font-family: inherit;
   font-size: 0.9rem;
 }
@@ -165,7 +167,7 @@ section {
   font-size: 0.6rem;
   padding: 0;
   width: 60%;
-  height: 45%;
+  height: 40%;
 }
 .Weapon-Changer {
   height: 100%;
@@ -189,12 +191,11 @@ section {
   display: flex;
   flex-direction: column;
   width: 25%;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   color: #101510;
 }
 .Score-Container h3 {
-  padding-top: 5%;
   height: 50%;
   width: 100%;
   margin: 0;
@@ -204,57 +205,59 @@ section {
 .Score {
   display: inline-block;
   text-align: center;
-  font-size: 4rem;
+  font-size: 3rem;
   height: fit-content;
   width: 100%;
+  margin: 0;
 }
 
 /* <----- Turn Display ----> */
 
 .Turn-Box {
   background-color: #37d84a;
-  height: 15%;
-  max-height: 15%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Turn,
 .No-Turn {
-  vertical-align: text-bottom;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #37d84a;
-  height: 100%;
+  height: 70%;
   width: 50%;
-  margin: 0 auto;
   color: transparent;
-  max-height: 100%;
 }
 .Turn {
   background-color: #ffeb38;
   color: #101510;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 /* <——— GAME SECTION ——> */
-.Board-Wrapper {
-  /* border: 1px solid red; */
+.Middle-Wrapper {
   display: flex;
   flex-direction: column;
   height: 60%;
   width: 100%;
+  min-height: 300px;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: 1em;
 }
 .Board-Selector,
 .Hidden-Selector {
-  /* border: 1px solid yellow; */
   width: 100%;
   text-align: center;
   min-width: 100%;
-  /* height: 10%; */
-  min-height: 8%;
-  max-height: 8%;
+  padding-top: 10px;
+  height: 10%;
+  min-height: 10%;
   font-size: 1rem;
+  margin: 0;
 }
 
 .Hidden-Selector {
@@ -273,14 +276,23 @@ section {
 }
 
 /* <----- Main Board ----> */
-
+.Board-Wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
+  height: 75%;
+  width: 100%;
+  min-width: 320px;
+  padding-top: 15px;
+}
 .Board {
   display: grid;
   grid-gap: 2%;
-  font-size: 1rem;
   justify-content: center;
-  height: 225px;
-  width: 240px;
+  height: 90%;
+  width: 70%;
 }
 .Board-9 {
   grid-template-columns: repeat(3, 1fr);
@@ -315,7 +327,7 @@ section {
 .Board-81 {
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: repeat(9, 1fr);
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .Box,
@@ -328,6 +340,9 @@ section {
   align-items: center;
   justify-content: center;
   color: #101510;
+}
+.Box:hover {
+  cursor: pointer;
 }
 
 .Winner {
@@ -354,21 +369,21 @@ section {
   width: 100%;
   align-items: center;
   justify-content: center;
-  /* height: 20%; */
   margin: 0;
   font-size: 0.8rem;
-  min-height: 10%;
-  max-height: 10%;
+  height: 15%;
 }
 
 .Message,
 .No-Message {
+  display: flex;
+  justify-content: center;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   line-height: 0.9rem;
-  text-align: center;
+  padding-top: 10px;
 }
 
 @keyframes blinker {
@@ -387,51 +402,18 @@ section {
   color: transparent;
 }
 
-@media only screen and (min-width: 320px) and (max-height: 568px) {
-  .Board {
-    height: 190px;
-    width: 210px;
-  }
-}
-@media only screen and (min-width: 421px) and (max-height: 568px) {
-  .Board {
-    width: 200px;
-    height: 190px;
-  }
-}
-@media only screen and (min-width: 375px) and (max-height: 812px) {
-  html {
-    font-size: 1.2em;
-  }
-  .Board {
-    width: 250px;
-    height: 250px;
-  }
-}
-@media only screen and (min-width: 375px) {
-  html {
-    font-size: 1.1em;
-  }
-  .Board {
-    width: 250px;
-    height: 220px;
-  }
-}
-
 @media only screen and (min-width: 411px) {
   html {
     font-size: 1.1em;
   }
+}
+@media only screen and (min-width: 420px) {
   .Board {
-    width: 290px;
-    height: 230px;
+    width: 55%;
   }
 }
 
 @media only screen and (min-width: 500px) {
-  html {
-    font-size: 1.1em;
-  }
   header {
     height: 15vh;
   }
@@ -448,7 +430,7 @@ section {
     font-size: 4rem;
   }
   .Player-Box {
-    margin: 0;
+    margin: 1%;
     display: flex;
     flex-direction: column;
     height: 90%;
@@ -458,13 +440,11 @@ section {
     min-height: 90%;
   }
   .Player {
-    /* border: 1px solid blue; */
     height: 95%;
     min-height: 95%;
     flex-direction: column;
   }
   .Player-Heading {
-    /* border: 1px solid blue; */
     justify-content: center;
     width: 100%;
     min-width: 100%;
@@ -472,17 +452,13 @@ section {
     min-height: 25%;
   }
   .Player-Heading h2 {
-    /* height: 50%; */
-    width: 90%;
-    /* border: 1px solid yellow; */
-    /* margin: 0; */
+    width: 100%;
+    line-height: 2rem;
   }
   .Icon {
     width: 100%;
-    border: 1px black solid;
   }
   .Player-Details {
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -491,7 +467,6 @@ section {
 
   .Name-Input,
   .Weapon-Input {
-    /* border: 1px solid black; */
     width: 90%;
     height: 40%;
   }
@@ -501,7 +476,6 @@ section {
     height: 30%;
   }
   .Weapon-Changer {
-    /* border: 1px solid yellow; */
     height: 100%;
   }
 
@@ -511,7 +485,6 @@ section {
   }
 
   .Turn-Box {
-    /* border: 1px solid red; */
     height: fit-content;
     height: 5%;
     margin: 0;
@@ -525,20 +498,24 @@ section {
     text-align: center;
   }
   /* * <——— BOARD ——> */
+  .Middle-Wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+    font-size: 1em;
+  }
+
   .Board-Wrapper {
     width: 60%;
     min-width: 50%;
     height: 100%;
-    min-height: none;
     max-height: 90%;
     justify-content: space-evenly;
   }
 
   .Board {
-    /* border: 1px solid red; */
     height: 280px;
     width: 280px;
-    /* border: 1px solid red; */
     grid-gap: 0.5rem;
   }
   .Turn {
@@ -602,12 +579,29 @@ section {
 }
 /* ----------- iPad Pro ----------- */
 /* Portrait and Landscape */
-@media only screen and (min-width: 1024px) and (max-height: 1366px) {
+@media only screen and (min-width: 1024px) and (min-height: 1366px) {
   html {
     font-size: 1.5em;
   }
   .Board {
-    height: 350px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
+  }
+}
+
+@media only screen and (min-width: 1500px) {
+  .Board {
+    height: 600px;
+    width: 600px;
+  }
+}
+
+@media only screen and (min-width: 2000px) {
+  html {
+    font-size: 2em;
+  }
+  .Board {
+    height: 700px;
+    width: 700px;
   }
 }
