--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "VT323";
   font-weight: 400;
-  src: local("Roboto"), url(./fonts/VT323-Regular.ttf) format("truetype");
+  src: local("Roboto"), url(./assets/fonts/VT323-Regular.ttf) format("truetype");
 }
 
 body {
