--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "VT323";
   font-weight: 400;
-  src: local("Roboto"), url(./assets/fonts/VT323-Regular.ttf) format("truetype");
+  src: local("VT323"), url(./assets/fonts/VT323-Regular.ttf) format("truetype");
 }
 
 body {
   margin: 0;
-  font-family: VT323, Roboto, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "VT323", "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
