Add default bot name feature

--- a/src/App.css
+++ b/src/App.css
@@ -550,7 +550,7 @@ section {
     width: 390px;
   }
   .Board-Selector,
-  .Hidden-Selector {git 
+  .Hidden-Selector {
     font-size: 0.9rem;
     padding-top: 0;
     height: 7%;
